// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SinglePhoto renders correctly for projects with a statement 1`] = `
<div>
  <a
    href="/work/my-first-project/02"
  >
    <div
      class="container"
    >
      <div
        class="title"
      >
        My First Project
      </div>
      <img
        alt="My First Project"
        class="photo"
        sizes="(max-width: 767px) 768px, 1280px"
        src="/photos/my-first-project/1280w/01.jpg"
        srcset="/photos/my-first-project/768w/01.jpg 768w, /photos/my-first-project/1280w/01.jpg 1280w"
      />
    </div>
  </a>
</div>
`;

exports[`SinglePhoto renders correctly for projects without a statement 1`] = `
<div>
  <a
    href="/work/no-statement/02"
  >
    <div
      class="container"
    >
      <div
        class="title"
      >
        Project without a statement
      </div>
      <img
        alt="Project without a statement"
        class="photo"
        sizes="(max-width: 767px) 768px, 1280px"
        src="/photos/no-statement/1280w/01.jpg"
        srcset="/photos/no-statement/768w/01.jpg 768w, /photos/no-statement/1280w/01.jpg 1280w"
      />
    </div>
  </a>
</div>
`;
